# quick-mcf

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  amazon_client.py  config.py  constants.py  database.py  jobs.py  main.py  models.py  schemas.py
app/routers/: admin.py  fulfillment.py  inventory.py  jobs.py  orders.py
app/services/: auth.py  fulfillment.py  inventory.py  order_status.py  quicklly.py
